--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 [Oo]bj/
 [Tt]emp/
 [Uu]nityGenerated/
+.vscode/
 # file on crash reports
 sysinfo.txt
 # Unity3D generated meta files
@@ -26,7 +27,6 @@ sysinfo.txt
 *.user
 *.userprefs
 *.pidb
-*.vscode
 .DS_Store
 
 ###
